--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
           "type": "boolean",
           "default": true,
           "description": "Enable or disable activity logging"
+        },
+        "activityJournal.syncFrequencyInMinutes": {
+          "type": "number",
+          "default": 5,
+          "description": "Sync syncFrequencyInMinutes"
         }
       }
     },
