Update README.md for clarity and conciseness; modify package.json to remove default GitHub owner

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "activityJournal.githubOwner": {
           "type": "string",
           "description": "GitHub Username or Org",
-          "default": "regis-martini"
+          "default": ""
         },
         "activityJournal.githubRepo": {
           "type": "string",
