Update package.json to improve description for sync frequency setting

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "activityJournal.syncFrequencyInMinutes": {
           "type": "number",
           "default": 5,
-          "description": "Sync syncFrequencyInMinutes"
+          "description": "SyncFrequencyInMinutes"
         }
       }
     },
