Update paths for feature example image and icon in README.md and package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "vscode-activity-journal",
   "description": "The extension capture actions from the user and how long the user has worked on each file and send data to  github as a journal of activity",
   "version": "1.0.0",
-  "icon": "icon.png",
+  "icon": "images/icon.png",
   "publisher": "regis-martini",
   "engines": {
     "vscode": "^1.95.0"
