Update display name in package.json to "Coding Activity Journal"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vscode-activity-journal",
-  "displayName": "vscode-activity-journal",
+  "displayName": "Coding Activity Journal",
   "description": "The extension capture actions from the user and how long the user has worked on each file and send data to  github as a journal of activity",
   "version": "1.0.0",
   "icon": "images/icon.png",
